// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Components renders AreaAboutMe properly 1`] = `
<div
  class="sc-eCImPb bgdGxH"
>
  Teste
</div>
`;

exports[`Cards Components renders AreaTextAboutMe properly 1`] = `
<div
  class="sc-gKclnd hzUzwE"
>
  Teste
</div>
`;

exports[`Cards Components renders Cards properly 1`] = `
<div
  class="sc-gsDKAQ fBMHkh"
>
  Teste
</div>
`;

exports[`Cards Components renders Container properly 1`] = `
<div
  class="sc-bdvvtL dVISxJ"
>
  Teste
</div>
`;

exports[`Cards Components renders WorkTools properly 1`] = `
<div
  class="sc-hKwDye RIQZw"
>
  Teste
</div>
`;

exports[`Hero Section Components renders Container properly 1`] = `
<div
  class="sc-gsDKAQ fBMHkh"
>
  Teste
</div>
`;

exports[`Hero Section Components renders HeroSection properly 1`] = `
<div
  class="sc-bdvvtL dVISxJ"
>
  Teste
</div>
`;
